--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^7.6.18",
     "@nestjs/core": "^7.6.18",
     "@nestjs/platform-express": "^7.6.18",
+    "@prisma/client": "^2.25.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +52,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "prisma": "^2.25.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-loader": "^9.2.3",
