--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,14 +4,10 @@ services:
   main:
     build:
       context: .
-      target: dev
-    volumes:
-      - .:/app
-      - ./node_modules:/app/node_modules
+      target: prod
     ports:
       - ${SERVER_PORT:-3000}:3000
       - 9229:9229
-    command: npm run start:dev
     env_file:
       - .env
     depends_on:
@@ -20,7 +16,7 @@ services:
     image: mysql:5.7
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --init-connect='SET NAMES utf8mb4;' --innodb-flush-log-at-trx-commit=0
     ports:
-      - ${DB_PORT:-3306}:3306
+      - 3306:3306
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
