--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "[ \"$DOCKERIZED\" = true ] && exit 0; husky install",
+    "postinstall": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
